--- a/src/main/webapp/app/entities/acme-pass/acme-pass-pwd-gen.html
+++ b/src/main/webapp/app/entities/acme-pass/acme-pass-pwd-gen.html
@@ -1,13 +1,3 @@
-<script>
-function minValue(value) {
-    if(parseInt(value) < 0) {
-		$("#number-is-neg").show();
-	}else{
-		$("#number-is-neg").hide();
-	}
-};
-</script>
-
 <form name="pdwGenForm" role="form" novalidate ng-submit="vm.save()" show-validation>
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
@@ -44,7 +34,7 @@ function minValue(value) {
 		<div class="form-group">
             <label class="col-control-label" for="field_length">Length</label>
             <input type="number" class="col-form-control" name="length" id="field_length"
-				   ng-model="vm.genOptions.length" min="0" required onblur="minValue(this.value)"/>
+				   ng-model="vm.genOptions.length" min="1" required/>
             <div ng-show="pdwGenForm.length.$invalid">
                 <p class="help-block" ng-show="pdwGenForm.length.$error.required">
                     This field is required.
@@ -52,9 +42,9 @@ function minValue(value) {
 				<p class="help-block" ng-show="pdwGenForm.length.$error.number">
                     Not a valid number.
                 </p>
-                <p class="help-block" id="number-is-neg">
-            		Length can't be negative.
-            	</p>
+                <p class="help-block" ng-show="pdwGenForm.length.$error.min">
+                    Length must be greater than zero.
+                </p>
             </div>
         </div>
 		<div class="clearfix">
