--- a/src/main/webapp/app/entities/acme-pass/acme-pass-pwd-gen.html
+++ b/src/main/webapp/app/entities/acme-pass/acme-pass-pwd-gen.html
@@ -66,7 +66,7 @@ function minValue(value) {
 
 		<h4>Password</h4>
 		<div class="form-group">
-            <input type="text" class="form-control" name="password" id="field_password" ng-model="vm.password"/>
+            <input type="text" class="form-control" name="password" id="field_password" ng-model="vm.password" disabled="disabled"/>
         </div>
 		<!--<label><input style="width: 50px;" maxlength="3" id="mindigits" type="text">Minimum Numeric Characters:</label>-->
     </div>
